internal/frontend/resources/lobby.css
/* ... */
.hint-underline {
    border-bottom: 0.2rem black solid;
    padding-bottom: 0.1rem;
}

.hint-revealed {
    border-bottom: 0.2rem rgb(38, 187, 38) solid;
    padding-bottom: 0.1rem;
}

.hint {
    font-family: monospace;
    font-weight: bold;
    font-size: 1.5rem;
    line-height: 1.4rem;
}

#lobby {
    padding: 5px;
    display: grid;
    grid-template-columns: 15rem auto 18rem;
    grid-template-rows: min-content min-content auto;
    grid-gap: 5px;
    flex: 1 1;
}

/*
 * These two ensure that the drawing board has an aspect ratio of 16/9.
 * Technically we could make this configurable by setting the padding via JS.
 */
#drawing-board-wrapper {
    width: 100%;
    height: 0;
    padding-top: 56.25%;
    position: relative;
    grid-column: 2;
    grid-row: 2;
}

#drawing-board-inner-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

#drawing-board {
    position: absolute;
    background-color: white;
    width: 100%;
    height: 100%;
    user-select: none;
    border-radius: var(--component-border-radius);
}

#center-dialogs {
    /* Without these two, drawing is impossible, since this container catches all events. */
    pointer-events: none;
    touch-action: none;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 20;
    display: flex;
    justify-content: center;
    align-items: center;
}

.center-dialog {
    /* All dialogs are initially invisible. */
    visibility: hidden;
    /* Since the parent ignores all of those events, we need to
    restore the handling, since our dialogs have buttons. */
    pointer-events: all;
    touch-action: auto;
    /* Allows layering, since there can be more than one dialog. */
    position: absolute;
    /* A dialog should never fully hide the canvas. */
    max-width: 80%;
    max-height: 80%;
    background-color: rgb(225, 221, 221);
    padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    border-radius: var(--component-border-radius);
}

.center-dialog-content {
    overflow: auto;
    flex: 1;
    width: 100%;
    justify-content: center;
    display: flex;
}

#chat {
    display: flex;
    flex-direction: column;
    grid-column: 3;
    grid-row-start: 2;
    grid-row-end: 3;
    height: 0;
    min-height: 100%;
}

#message-container {
    overflow-y: scroll;
    background-color: white;
    flex: 1;
    border-radius: var(--component-border-radius) var(--component-border-radius)
        0 0;
}

.chat-name {
    font-weight: bold;
    padding-right: 0.2em;
}

.chat-name:after {
    content: ":";
}

.correct-guess-message {
    font-weight: bold;
    color: rgb(38, 187, 38);
}

.correct-guess-message-other-player {
    font-weight: bold;
    color: rgb(231 198 32);
}

.non-guessing-player-message {
    color: rgb(38, 187, 38);
}

.close-guess-message {
    font-weight: bold;
    color: rgb(25, 166, 166);
}

#message-input {
    padding: 10px;
    margin-top: 5px;
    border: 0;
    border-radius: 0 0 var(--component-border-radius)
        var(--component-border-radius);
}

.dialog-title {
    margin-bottom: 1rem;
    font-size: 2.75rem;
    font-weight: bold;
    color: rgb(240, 105, 127);
    text-align: center;
}

#word-button-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    margin-left: 20px;
    margin-right: 20px;
    gap: 0.5rem;
    align-self: stretch;
}

@media only screen and (max-width: 600px) {
    #word-button-container {
        grid-template-columns: repeat(2, 1fr);
    }
}

.dialog-button {
    border: none;
    background-color: var(--component-base-color);
    padding: 0.5rem 1rem 0.5rem 1rem;
}

.button-bar {
    display: flex;
    align-items: stretch;
    justify-content: center;
    margin-top: 1em;
    gap: 0.25rem;
}

.line-width-button-content:hover {
    background-color: var(--component-hover-background);
}

.header-button {
    padding: 0.2rem;
    background-color: transparent;
    user-select: none;
}

.header-button-image {
    width: 1.7rem;
    height: 1.7rem;
    /** Without these two, the button has too much height. */
    display: inline-block;
    vertical-align: middle;
}

.dot {
    background-color: var(--dot-color);
    border: 1px solid black;
    border-radius: 50%;
}

.line-width-button-content {
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--component-base-color);
}

.line-width-button-content > *,
.canvas-button > * {
    width: 40px;
    height: 40px;
}

.line-width-button:checked + .line-width-button-content {
    background-color: var(--component-active-background);
}

.canvas-button {
    height: 50px;
    width: 50px;
    border: 0;
    padding: 0;
}

.canvas-button > img {
    display: inline-block;
    vertical-align: middle;
}

.canvas-button::-moz-focus-inner {
    border: 0;
}

.color-button-container {
    border: 1px solid gray;
    display: flex;
    flex-direction: column;
    height: 48px;
    border-radius: var(--component-border-radius);
    overflow: hidden;
}

.color-button-row {
    display: flex;
    flex-direction: row;
}

.color-button {
    height: 24px;
    width: 24px;
    border: 0;
    border-radius: 0;
}

.color-button::-moz-focus-inner {
    border: 0;
}

.message {
    overflow-wrap: break-word;
    padding: 0.3em 0.2em 0.2em 0.3em;
}

.message:nth-child(2n) {
    background-color: rgb(240, 238, 238);
}

.system-message {
    font-weight: bold;
    color: red;
}

#toolbox {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    grid-row: 3;
    grid-column: 2 / 4;
    height: min-content;
    user-select: none;
    column-gap: 10px;
    row-gap: 5px;
}

.toolbox-group {
    align-self: flex-start;
}

.pencil-sizes-container {
    display: flex;
    gap: 2.5px;
}

.line-width-button-content {
    border-radius: var(--component-border-radius);
}
/* ... */

